--- a/virginica petal_width difference of means.html
+++ b/virginica petal_width difference of means.html
@@ -9,36 +9,113 @@
       </script>
       <script src="https://cdn.plot.ly/plotly-2.18.0.min.js"></script>
       <div
-        id="5ade4fa2-b1de-4653-a990-0083476ab35c"
+        id="d6b394fa-46db-4051-bb20-54a6070c5b9d"
         class="plotly-graph-div"
         style="height: 100%; width: 100%"
       ></div>
       <script type="text/javascript">
         window.PLOTLYENV = window.PLOTLYENV || {};
-        if (document.getElementById("5ade4fa2-b1de-4653-a990-0083476ab35c")) {
+        if (document.getElementById("d6b394fa-46db-4051-bb20-54a6070c5b9d")) {
           Plotly.newPlot(
-            "5ade4fa2-b1de-4653-a990-0083476ab35c",
+            "d6b394fa-46db-4051-bb20-54a6070c5b9d",
             [
               {
-                name: "Count of Each Species",
-                x: ["virginica", "not virginica"],
-                y: [50, 100],
-                type: "bar",
-                xaxis: "x",
-                yaxis: "y",
+                name: "count",
+                x: [
+                  0.2, 0.2, 0.2, 0.2, 0.2, 0.4, 0.3, 0.2, 0.2, 0.1, 0.2, 0.2,
+                  0.1, 0.1, 0.2, 0.4, 0.4, 0.3, 0.3, 0.3, 0.2, 0.4, 0.2, 0.5,
+                  0.2, 0.2, 0.4, 0.2, 0.2, 0.2, 0.2, 0.4, 0.1, 0.2, 0.1, 0.2,
+                  0.2, 0.1, 0.2, 0.2, 0.3, 0.3, 0.2, 0.6, 0.4, 0.3, 0.2, 0.2,
+                  0.2, 0.2, 1.4, 1.5, 1.5, 1.3, 1.5, 1.3, 1.6, 1.0, 1.3, 1.4,
+                  1.0, 1.5, 1.0, 1.4, 1.3, 1.4, 1.5, 1.0, 1.5, 1.1, 1.8, 1.3,
+                  1.5, 1.2, 1.3, 1.4, 1.4, 1.7, 1.5, 1.0, 1.1, 1.0, 1.2, 1.6,
+                  1.5, 1.6, 1.5, 1.3, 1.3, 1.3, 1.2, 1.4, 1.2, 1.0, 1.3, 1.2,
+                  1.3, 1.3, 1.1, 1.3, 2.5, 1.9, 2.1, 1.8, 2.2, 2.1, 1.7, 1.8,
+                  1.8, 2.5, 2.0, 1.9, 2.1, 2.0, 2.4, 2.3, 1.8, 2.2, 2.3, 1.5,
+                  2.3, 2.0, 2.0, 1.8, 2.1, 1.8, 1.8, 1.8, 2.1, 1.6, 1.9, 2.0,
+                  2.2, 1.5, 1.4, 2.3, 2.4, 1.8, 1.8, 2.1, 2.4, 2.3, 1.9, 2.3,
+                  2.5, 2.3, 1.9, 2.0, 2.3, 1.8,
+                ],
+                xbins: { end: 2.5, size: 0.48, start: 0.1 },
+                type: "histogram",
               },
               {
                 name: "$\\mu_0$",
-                x: ["virginica", "not virginica"],
-                y: [2.0260000000000002, 0.7849999999999998],
+                x: [
+                  0.2, 0.2, 0.2, 0.2, 0.2, 0.4, 0.3, 0.2, 0.2, 0.1, 0.2, 0.2,
+                  0.1, 0.1, 0.2, 0.4, 0.4, 0.3, 0.3, 0.3, 0.2, 0.4, 0.2, 0.5,
+                  0.2, 0.2, 0.4, 0.2, 0.2, 0.2, 0.2, 0.4, 0.1, 0.2, 0.1, 0.2,
+                  0.2, 0.1, 0.2, 0.2, 0.3, 0.3, 0.2, 0.6, 0.4, 0.3, 0.2, 0.2,
+                  0.2, 0.2, 1.4, 1.5, 1.5, 1.3, 1.5, 1.3, 1.6, 1.0, 1.3, 1.4,
+                  1.0, 1.5, 1.0, 1.4, 1.3, 1.4, 1.5, 1.0, 1.5, 1.1, 1.8, 1.3,
+                  1.5, 1.2, 1.3, 1.4, 1.4, 1.7, 1.5, 1.0, 1.1, 1.0, 1.2, 1.6,
+                  1.5, 1.6, 1.5, 1.3, 1.3, 1.3, 1.2, 1.4, 1.2, 1.0, 1.3, 1.2,
+                  1.3, 1.3, 1.1, 1.3, 2.5, 1.9, 2.1, 1.8, 2.2, 2.1, 1.7, 1.8,
+                  1.8, 2.5, 2.0, 1.9, 2.1, 2.0, 2.4, 2.3, 1.8, 2.2, 2.3, 1.5,
+                  2.3, 2.0, 2.0, 1.8, 2.1, 1.8, 1.8, 1.8, 2.1, 1.6, 1.9, 2.0,
+                  2.2, 1.5, 1.4, 2.3, 2.4, 1.8, 1.8, 2.1, 2.4, 2.3, 1.9, 2.3,
+                  2.5, 2.3, 1.9, 2.0, 2.3, 1.8,
+                ],
+                y: [
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                ],
                 type: "scatter",
                 xaxis: "x",
                 yaxis: "y2",
               },
               {
-                name: "$\\mu_i - \\mu_0$",
-                x: ["virginica", "not virginica"],
-                y: [1.1986666666666668, 1.1986666666666668],
+                name: "$\\mu_i$",
+                x: [0.33999999999999997, 0.82, 1.3, 1.78, 2.2600000000000002],
+                y: [0.0, 0.0, 0.07317073170731707, 0.8275862068965517, 1.0],
                 type: "scatter",
                 xaxis: "x",
                 yaxis: "y2",
@@ -470,20 +547,20 @@
               xaxis: {
                 anchor: "y",
                 domain: [0.0, 0.94],
-                title: { text: "Species" },
+                title: { text: "petal_width" },
               },
               yaxis: {
                 anchor: "x",
                 domain: [0.0, 1.0],
-                title: { text: "Count" },
+                title: { text: "<b>Count</b>" },
               },
               yaxis2: {
                 anchor: "x",
                 overlaying: "y",
                 side: "right",
-                title: { text: "Mean Length" },
+                title: { text: "<b>Likelihood of Being virginica</b> " },
               },
-              title: { text: "virginica petal_width difference of means" },
+              title: { text: "virginica petal_width Difference of Means" },
             },
             { responsive: true }
           );
