--- a/setosa sepal_length difference of means.html
+++ b/setosa sepal_length difference of means.html
@@ -9,36 +9,116 @@
       </script>
       <script src="https://cdn.plot.ly/plotly-2.18.0.min.js"></script>
       <div
-        id="3898d598-04db-4c8d-837c-a55bccd29bf0"
+        id="0ecea737-cde7-469a-82d0-5ea909e2ee2b"
         class="plotly-graph-div"
         style="height: 100%; width: 100%"
       ></div>
       <script type="text/javascript">
         window.PLOTLYENV = window.PLOTLYENV || {};
-        if (document.getElementById("3898d598-04db-4c8d-837c-a55bccd29bf0")) {
+        if (document.getElementById("0ecea737-cde7-469a-82d0-5ea909e2ee2b")) {
           Plotly.newPlot(
-            "3898d598-04db-4c8d-837c-a55bccd29bf0",
+            "0ecea737-cde7-469a-82d0-5ea909e2ee2b",
             [
               {
-                name: "Count of Each Species",
-                x: ["setosa", "not setosa"],
-                y: [50, 100],
-                type: "bar",
-                xaxis: "x",
-                yaxis: "y",
+                name: "count",
+                x: [
+                  5.1, 4.9, 4.7, 4.6, 5.0, 5.4, 4.6, 5.0, 4.4, 4.9, 5.4, 4.8,
+                  4.8, 4.3, 5.8, 5.7, 5.4, 5.1, 5.7, 5.1, 5.4, 5.1, 4.6, 5.1,
+                  4.8, 5.0, 5.0, 5.2, 5.2, 4.7, 4.8, 5.4, 5.2, 5.5, 4.9, 5.0,
+                  5.5, 4.9, 4.4, 5.1, 5.0, 4.5, 4.4, 5.0, 5.1, 4.8, 5.1, 4.6,
+                  5.3, 5.0, 7.0, 6.4, 6.9, 5.5, 6.5, 5.7, 6.3, 4.9, 6.6, 5.2,
+                  5.0, 5.9, 6.0, 6.1, 5.6, 6.7, 5.6, 5.8, 6.2, 5.6, 5.9, 6.1,
+                  6.3, 6.1, 6.4, 6.6, 6.8, 6.7, 6.0, 5.7, 5.5, 5.5, 5.8, 6.0,
+                  5.4, 6.0, 6.7, 6.3, 5.6, 5.5, 5.5, 6.1, 5.8, 5.0, 5.6, 5.7,
+                  5.7, 6.2, 5.1, 5.7, 6.3, 5.8, 7.1, 6.3, 6.5, 7.6, 4.9, 7.3,
+                  6.7, 7.2, 6.5, 6.4, 6.8, 5.7, 5.8, 6.4, 6.5, 7.7, 7.7, 6.0,
+                  6.9, 5.6, 7.7, 6.3, 6.7, 7.2, 6.2, 6.1, 6.4, 7.2, 7.4, 7.9,
+                  6.4, 6.3, 6.1, 7.7, 6.3, 6.4, 6.0, 6.9, 6.7, 6.9, 5.8, 6.8,
+                  6.7, 6.7, 6.3, 6.5, 6.2, 5.9,
+                ],
+                xbins: { end: 7.9, size: 0.7200000000000001, start: 4.3 },
+                type: "histogram",
               },
               {
                 name: "$\\mu_0$",
-                x: ["setosa", "not setosa"],
-                y: [5.006, 6.2620000000000005],
+                x: [
+                  5.1, 4.9, 4.7, 4.6, 5.0, 5.4, 4.6, 5.0, 4.4, 4.9, 5.4, 4.8,
+                  4.8, 4.3, 5.8, 5.7, 5.4, 5.1, 5.7, 5.1, 5.4, 5.1, 4.6, 5.1,
+                  4.8, 5.0, 5.0, 5.2, 5.2, 4.7, 4.8, 5.4, 5.2, 5.5, 4.9, 5.0,
+                  5.5, 4.9, 4.4, 5.1, 5.0, 4.5, 4.4, 5.0, 5.1, 4.8, 5.1, 4.6,
+                  5.3, 5.0, 7.0, 6.4, 6.9, 5.5, 6.5, 5.7, 6.3, 4.9, 6.6, 5.2,
+                  5.0, 5.9, 6.0, 6.1, 5.6, 6.7, 5.6, 5.8, 6.2, 5.6, 5.9, 6.1,
+                  6.3, 6.1, 6.4, 6.6, 6.8, 6.7, 6.0, 5.7, 5.5, 5.5, 5.8, 6.0,
+                  5.4, 6.0, 6.7, 6.3, 5.6, 5.5, 5.5, 6.1, 5.8, 5.0, 5.6, 5.7,
+                  5.7, 6.2, 5.1, 5.7, 6.3, 5.8, 7.1, 6.3, 6.5, 7.6, 4.9, 7.3,
+                  6.7, 7.2, 6.5, 6.4, 6.8, 5.7, 5.8, 6.4, 6.5, 7.7, 7.7, 6.0,
+                  6.9, 5.6, 7.7, 6.3, 6.7, 7.2, 6.2, 6.1, 6.4, 7.2, 7.4, 7.9,
+                  6.4, 6.3, 6.1, 7.7, 6.3, 6.4, 6.0, 6.9, 6.7, 6.9, 5.8, 6.8,
+                  6.7, 6.7, 6.3, 6.5, 6.2, 5.9,
+                ],
+                y: [
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                ],
                 type: "scatter",
                 xaxis: "x",
                 yaxis: "y2",
               },
               {
-                name: "$\\mu_i - \\mu_0$",
-                x: ["setosa", "not setosa"],
-                y: [5.843333333333334, 5.843333333333334],
+                name: "$\\mu_i$",
+                x: [4.66, 5.38, 6.1, 6.82, 7.54],
+                y: [
+                  0.8709677419354839, 0.5121951219512195, 0.023809523809523808,
+                  0.0, 0.0,
+                ],
                 type: "scatter",
                 xaxis: "x",
                 yaxis: "y2",
@@ -470,20 +550,20 @@
               xaxis: {
                 anchor: "y",
                 domain: [0.0, 0.94],
-                title: { text: "Species" },
+                title: { text: "sepal_length" },
               },
               yaxis: {
                 anchor: "x",
                 domain: [0.0, 1.0],
-                title: { text: "Count" },
+                title: { text: "<b>Count</b>" },
               },
               yaxis2: {
                 anchor: "x",
                 overlaying: "y",
                 side: "right",
-                title: { text: "Mean Length" },
+                title: { text: "<b>Likelihood of Being setosa</b> " },
               },
-              title: { text: "setosa sepal_length difference of means" },
+              title: { text: "setosa sepal_length Difference of Means" },
             },
             { responsive: true }
           );
