--- a/virginica petal_length difference of means.html
+++ b/virginica petal_length difference of means.html
@@ -9,36 +9,116 @@
       </script>
       <script src="https://cdn.plot.ly/plotly-2.18.0.min.js"></script>
       <div
-        id="42f219fb-efec-413e-ade7-0abc72f23f82"
+        id="6b0827de-cb40-4267-8b9c-6bbe37c9b2f3"
         class="plotly-graph-div"
         style="height: 100%; width: 100%"
       ></div>
       <script type="text/javascript">
         window.PLOTLYENV = window.PLOTLYENV || {};
-        if (document.getElementById("42f219fb-efec-413e-ade7-0abc72f23f82")) {
+        if (document.getElementById("6b0827de-cb40-4267-8b9c-6bbe37c9b2f3")) {
           Plotly.newPlot(
-            "42f219fb-efec-413e-ade7-0abc72f23f82",
+            "6b0827de-cb40-4267-8b9c-6bbe37c9b2f3",
             [
               {
-                name: "Count of Each Species",
-                x: ["virginica", "not virginica"],
-                y: [50, 100],
-                type: "bar",
-                xaxis: "x",
-                yaxis: "y",
+                name: "count",
+                x: [
+                  1.4, 1.4, 1.3, 1.5, 1.4, 1.7, 1.4, 1.5, 1.4, 1.5, 1.5, 1.6,
+                  1.4, 1.1, 1.2, 1.5, 1.3, 1.4, 1.7, 1.5, 1.7, 1.5, 1.0, 1.7,
+                  1.9, 1.6, 1.6, 1.5, 1.4, 1.6, 1.6, 1.5, 1.5, 1.4, 1.5, 1.2,
+                  1.3, 1.5, 1.3, 1.5, 1.3, 1.3, 1.3, 1.6, 1.9, 1.4, 1.6, 1.4,
+                  1.5, 1.4, 4.7, 4.5, 4.9, 4.0, 4.6, 4.5, 4.7, 3.3, 4.6, 3.9,
+                  3.5, 4.2, 4.0, 4.7, 3.6, 4.4, 4.5, 4.1, 4.5, 3.9, 4.8, 4.0,
+                  4.9, 4.7, 4.3, 4.4, 4.8, 5.0, 4.5, 3.5, 3.8, 3.7, 3.9, 5.1,
+                  4.5, 4.5, 4.7, 4.4, 4.1, 4.0, 4.4, 4.6, 4.0, 3.3, 4.2, 4.2,
+                  4.2, 4.3, 3.0, 4.1, 6.0, 5.1, 5.9, 5.6, 5.8, 6.6, 4.5, 6.3,
+                  5.8, 6.1, 5.1, 5.3, 5.5, 5.0, 5.1, 5.3, 5.5, 6.7, 6.9, 5.0,
+                  5.7, 4.9, 6.7, 4.9, 5.7, 6.0, 4.8, 4.9, 5.6, 5.8, 6.1, 6.4,
+                  5.6, 5.1, 5.6, 6.1, 5.6, 5.5, 4.8, 5.4, 5.6, 5.1, 5.1, 5.9,
+                  5.7, 5.2, 5.0, 5.2, 5.4, 5.1,
+                ],
+                xbins: { end: 6.9, size: 1.1800000000000002, start: 1.0 },
+                type: "histogram",
               },
               {
                 name: "$\\mu_0$",
-                x: ["virginica", "not virginica"],
-                y: [5.5520000000000005, 2.8620000000000005],
+                x: [
+                  1.4, 1.4, 1.3, 1.5, 1.4, 1.7, 1.4, 1.5, 1.4, 1.5, 1.5, 1.6,
+                  1.4, 1.1, 1.2, 1.5, 1.3, 1.4, 1.7, 1.5, 1.7, 1.5, 1.0, 1.7,
+                  1.9, 1.6, 1.6, 1.5, 1.4, 1.6, 1.6, 1.5, 1.5, 1.4, 1.5, 1.2,
+                  1.3, 1.5, 1.3, 1.5, 1.3, 1.3, 1.3, 1.6, 1.9, 1.4, 1.6, 1.4,
+                  1.5, 1.4, 4.7, 4.5, 4.9, 4.0, 4.6, 4.5, 4.7, 3.3, 4.6, 3.9,
+                  3.5, 4.2, 4.0, 4.7, 3.6, 4.4, 4.5, 4.1, 4.5, 3.9, 4.8, 4.0,
+                  4.9, 4.7, 4.3, 4.4, 4.8, 5.0, 4.5, 3.5, 3.8, 3.7, 3.9, 5.1,
+                  4.5, 4.5, 4.7, 4.4, 4.1, 4.0, 4.4, 4.6, 4.0, 3.3, 4.2, 4.2,
+                  4.2, 4.3, 3.0, 4.1, 6.0, 5.1, 5.9, 5.6, 5.8, 6.6, 4.5, 6.3,
+                  5.8, 6.1, 5.1, 5.3, 5.5, 5.0, 5.1, 5.3, 5.5, 6.7, 6.9, 5.0,
+                  5.7, 4.9, 6.7, 4.9, 5.7, 6.0, 4.8, 4.9, 5.6, 5.8, 6.1, 6.4,
+                  5.6, 5.1, 5.6, 6.1, 5.6, 5.5, 4.8, 5.4, 5.6, 5.1, 5.1, 5.9,
+                  5.7, 5.2, 5.0, 5.2, 5.4, 5.1,
+                ],
+                y: [
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                  0.3333333333333333, 0.3333333333333333, 0.3333333333333333,
+                ],
                 type: "scatter",
                 xaxis: "x",
                 yaxis: "y2",
               },
               {
-                name: "$\\mu_i - \\mu_0$",
-                x: ["virginica", "not virginica"],
-                y: [3.758666666666666, 3.758666666666666],
+                name: "$\\mu_i$",
+                x: [
+                  1.59, 2.7700000000000005, 3.95, 5.130000000000001,
+                  6.3100000000000005,
+                ],
+                y: [0.0, 0.0, 0.029411764705882353, 0.7021276595744681, 1.0],
                 type: "scatter",
                 xaxis: "x",
                 yaxis: "y2",
@@ -470,20 +550,20 @@
               xaxis: {
                 anchor: "y",
                 domain: [0.0, 0.94],
-                title: { text: "Species" },
+                title: { text: "petal_length" },
               },
               yaxis: {
                 anchor: "x",
                 domain: [0.0, 1.0],
-                title: { text: "Count" },
+                title: { text: "<b>Count</b>" },
               },
               yaxis2: {
                 anchor: "x",
                 overlaying: "y",
                 side: "right",
-                title: { text: "Mean Length" },
+                title: { text: "<b>Likelihood of Being virginica</b> " },
               },
-              title: { text: "virginica petal_length difference of means" },
+              title: { text: "virginica petal_length Difference of Means" },
             },
             { responsive: true }
           );
