More docker stuff. Maybe wait time. But connection aborted

--- a/Cont Cat Brute Force.html
+++ b/Cont Cat Brute Force.html
@@ -1,6 +1,6 @@
 <table border="1" class="dataframe">
   <thead>
-    <tr style="text-align: right">
+    <tr style="text-align: right;">
       <th></th>
       <th>cont_feature</th>
       <th>cat_feature</th>
@@ -9,5 +9,6 @@
       <th>MoR Plot</th>
     </tr>
   </thead>
-  <tbody></tbody>
+  <tbody>
+  </tbody>
 </table>
